--- a/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-backend/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-archetype-mgmt/kie-wb-common-archetype-mgmt-backend/pom.xml
@@ -35,6 +35,14 @@
   </properties>
 
   <dependencies>
+    <!-- Needed due to GWT upgrade. See https://issues.redhat.com/browse/AF-2542 -->
+    <!-- ArchetypeServiceImpl.checkKieTemplates() throws an exception during deployment without this dependency-->
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
