--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,20 +4,12 @@ on: [pull_request]
 
 jobs:
   build-chain:
-    strategy:
-      matrix:
-        java-version: [8, 11]
-      fail-fast: false
     runs-on: ubuntu-latest
-    name: Maven Build
+    name: Maven Build (8)
     steps:
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: ${{ matrix.java-version }}
-      - name: Build Chain ${{ matrix.java-version }}
+      - name: Build Chain
         id: build-chain
-        uses: kiegroup/github-action-build-chain@v1.4
+        uses: kiegroup/github-action-build-chain@openjdk8
         with:
           parent-dependencies: 'kie-wb-playground'
           child-dependencies: 'drools-wb'
@@ -26,6 +18,7 @@ jobs:
             mvn -e -T1C clean install -DskipTests -Dgwt.compiler.skip=true -Dgwt.skipCompilation=true -Denforcer.skip=true -Dcheckstyle.skip=true -Dspotbugs.skip=true -Drevapi.skip=true
             rm -rf ./*
           workflow-file-name: "pull_request.yml"
+          archive-artifacts-path: |
+            **/target/screenshots/**
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-                                                                      
