fixed conflicts with errai-javax-enterprise dependency

--- a/kie-wb-common-cli/kie-wb-common-cli-tools/kie-wb-common-cli-pom-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-cli-tools/kie-wb-common-cli-pom-migration/pom.xml
@@ -34,6 +34,10 @@
           <groupId>org.uberfire</groupId>
           <artifactId>uberfire-servlet-security</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -58,10 +62,22 @@
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-project-api</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-services-api</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
@@ -120,6 +136,12 @@
     <dependency>
       <groupId>org.kie.workbench</groupId>
       <artifactId>kie-wb-common-cli-project-migration</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.kie.soup</groupId>
