--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/META-INF/ErraiApp.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/META-INF/ErraiApp.properties
@@ -29,5 +29,6 @@
 # https://docs.jboss.org/author/display/ERRAI/ErraiApp.properties
 # for details.
 errai.ioc.enabled.alternatives=org.kie.workbench.common.dmn.client.commands.clone.DMNDeepCloneProcess \
-                               org.kie.workbench.common.dmn.client.api.ReadOnlyProviderImpl
+                               org.kie.workbench.common.dmn.client.api.ReadOnlyProviderImpl \
+                               org.kie.workbench.common.dmn.client.docks.navigator.drds.DMNGraphsProvider 
 
