--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -13,9 +13,11 @@
     "quality-checks": "npm run type-check && npm run lint && npm run test"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.5",
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
+    "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/victory": "^33.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -23,7 +25,7 @@
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^4.0.0",
-    "enzyme": "^3.7.0",
+    "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
     "eslint": "^7.11.0",
@@ -32,10 +34,12 @@
     "express": "^4.17.1",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "imagemin": "^7.0.0",
     "jest": "^26.5.3",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "prettier": "^2.1.2",
     "prop-types": "^15.6.1",
     "raw-loader": "^4.0.2",
     "react-axe": "^3.5.4",
@@ -62,8 +66,7 @@
     "@patternfly/react-icons": "^4.7.11",
     "@patternfly/react-styles": "^4.7.8",
     "lodash": "^4.17.20",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-router-last-location": "^2.0.1"
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   }
 }
