--- a/kie-wb-common-react/boxed-expression-editor/tsconfig.json
+++ b/kie-wb-common-react/boxed-expression-editor/tsconfig.json
@@ -1,34 +1,18 @@
 {
+  "include": ["src"],
+  "exclude": ["./**/node_modules", "./**/test-setup"],
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": ".",
-    "outDir": "dist",
-    "module": "esnext",
+    "lib": ["es6", "dom", "es2018.promise"],
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "declaration": true,
     "sourceMap": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
+    "noImplicitAny": true,
     "noImplicitThis": true,
-    "noImplicitAny": false,
-    "allowJs": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "paths": {
-      "@app/*": ["src/app/*"],
-      "@assets/*": ["node_modules/@patternfly/react-core/dist/styles/assets/*"]
-    },
-    "importHelpers": true,
-    "skipLibCheck": true
-  },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.jsx",
-    "**/*.js"
-  ],
-  "exclude": ["node_modules"]
+    "strictNullChecks": true,
+    "experimentalDecorators": true,
+    "downlevelIteration": true,
+    "jsx": "react",
+    "outDir": "dist"
+  }
 }
