--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -54,7 +54,7 @@
     "ts-loader": "^8.0.5",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3",
+    "typescript": "3.8.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0",
@@ -62,6 +62,8 @@
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
+    "@kogito-tooling/i18n": "^0.7.2-alpha3",
+    "@kogito-tooling/i18n-common-dictionary": "^0.7.2-alpha3",
     "@patternfly/react-core": "^4.63.3",
     "@patternfly/react-icons": "^4.7.11",
     "@patternfly/react-styles": "^4.7.8",
