--- a/kie-wb-common-react/boxed-expression-editor/tsconfig.json
+++ b/kie-wb-common-react/boxed-expression-editor/tsconfig.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "downlevelIteration": true,
     "jsx": "react",
-    "outDir": "dist"
+    "outDir": "dist",
+    "skipLibCheck": true
   }
 }
