--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -1,12 +1,9 @@
 {
   "name": "boxed-expression-editor",
-  "main": "server.js",
   "private": true,
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack serve --hot --color --progress --config webpack.dev.js",
-    "start:prod": "node server.js",
     "test": "jest",
     "lint": "eslint --ext .tsx,.js ./src/",
     "type-check": "tsc --noEmit",
@@ -17,9 +14,10 @@
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
-    "@types/react-dom": "^16.9.9",
+    "@types/node": "12.11.6",
+    "@types/react": "16.9.9",
+    "@types/react-dom": "16.9.2",
     "@types/react-router-dom": "^5.1.6",
-    "@types/victory": "^33.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "copy-webpack-plugin": "^6.2.1",
@@ -28,7 +26,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.11.0",
+    "eslint": "6.1.0",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "express": "^4.17.1",
@@ -36,29 +34,31 @@
     "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
     "imagemin": "^7.0.0",
-    "jest": "^26.5.3",
+    "install-peers-cli": "^2.2.0",
+    "jest": "24.9.0",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "prop-types": "^15.6.1",
     "raw-loader": "^4.0.2",
-    "react-axe": "^3.5.4",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^6.0.0",
-    "terser-webpack-plugin": "^5.0.0",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.5",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "tslib": "^2.0.3",
     "typescript": "3.8.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.1.3",
+    "webpack": "4.41.0",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "3.2.1",
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
@@ -67,8 +67,16 @@
     "@patternfly/react-core": "^4.63.3",
     "@patternfly/react-icons": "^4.7.11",
     "@patternfly/react-styles": "^4.7.8",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.20"
+  },
+  "peerDependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "resolutions": {
+    "babel-jest": "24.9.0",
+    "eslint": "6.1.0",
+    "jest": "24.9.0",
+    "webpack": "4.41.0"
   }
 }
