--- a/kie-wb-common-react/boxed-expression-editor/showcase/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/showcase/package.json
@@ -13,14 +13,16 @@
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
     "customize-cra": "^0.9.1",
-    "react": "16.11.0",
     "react-app-rewired": "^2.1.5",
-    "react-dom": "16.11.0",
     "react-scripts": "3.2.0",
     "typescript": "3.7.3"
   },
   "devDependencies": {
     "node-sass": "^4.13.0"
+  },
+  "peerDependencies": {
+    "react": "16.11.0",
+    "react-dom": "16.11.0"
   },
   "browserslist": {
     "production": [
