Adding lodash type

--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -14,6 +14,7 @@
     "@types/enzyme": "^3.10.7",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.165",
     "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
@@ -42,8 +43,8 @@
     "prop-types": "^15.6.1",
     "raw-loader": "^4.0.2",
     "react": "16.11.0",
-    "react-dom": "16.11.0",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
