--- a/kie-wb-common-react/boxed-expression-editor/.eslintrc
+++ b/kie-wb-common-react/boxed-expression-editor/.eslintrc
@@ -38,6 +38,7 @@
   ],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/interface-name-prefix": "off",
