--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -11,8 +11,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.5",
-    "@types/enzyme": "^3.10.7",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@testing-library/react": "^11.1.2",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.165",
     "@types/node": "12.11.6",
@@ -24,9 +23,6 @@
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^4.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.6.1",
     "eslint": "6.1.0",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
@@ -36,6 +32,7 @@
     "imagemin": "^7.0.0",
     "install-peers-cli": "^2.2.0",
     "jest": "24.9.0",
+    "jest-webextension-mock": "^3.7.3",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
@@ -45,6 +42,7 @@
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "16.11.0",
     "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "style-loader": "^2.0.0",
