--- a/kie-wb-common-react/boxed-expression-editor/showcase/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/showcase/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "eject": "react-scripts eject"
+    "build": "react-app-rewired build"
   },
   "dependencies": {
     "@types/node": "12.11.6",
