--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -24,6 +24,8 @@
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^4.0.0",
     "eslint": "6.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.1",
