Activated 'prettier' also for .ts files

--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -5,7 +5,7 @@
     "prebuild": "rimraf dist",
     "build": "webpack --config webpack.prod.js",
     "test": "jest",
-    "lint": "eslint --ext .tsx,.js ./src/",
+    "lint": "eslint --ext .ts,.tsx,.js ./src/",
     "type-check": "tsc --noEmit",
     "quality-checks": "npm run type-check && npm run lint && npm run test"
   },
