--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -24,7 +24,7 @@
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^4.0.0",
-    "eslint": "6.1.0",
+    "eslint": "7.11.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
@@ -34,7 +34,7 @@
     "identity-obj-proxy": "^3.0.0",
     "imagemin": "^7.0.0",
     "install-peers-cli": "^2.2.0",
-    "jest": "24.9.0",
+    "jest": "26.6.0",
     "jest-webextension-mock": "^3.7.3",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
@@ -51,15 +51,15 @@
     "style-loader": "^2.0.0",
     "svg-url-loader": "^6.0.0",
     "terser-webpack-plugin": "^4.2.3",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "26.4.1",
     "ts-loader": "^8.0.5",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "tslib": "^2.0.3",
     "typescript": "3.8.3",
     "url-loader": "^4.1.1",
-    "webpack": "4.41.0",
+    "webpack": "4.44.2",
     "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "3.2.1",
+    "webpack-dev-server": "3.11.0",
     "webpack-merge": "^5.2.0"
   },
   "dependencies": {
@@ -75,11 +75,5 @@
   "peerDependencies": {
     "react": "16.12.0",
     "react-dom": "16.12.0"
-  },
-  "resolutions": {
-    "babel-jest": "24.9.0",
-    "eslint": "6.1.0",
-    "jest": "24.9.0",
-    "webpack": "4.41.0"
   }
 }
