--- a/kie-wb-common-react/boxed-expression-editor/tsconfig.json
+++ b/kie-wb-common-react/boxed-expression-editor/tsconfig.json
@@ -14,6 +14,7 @@
     "downlevelIteration": true,
     "jsx": "react",
     "outDir": "dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "isolatedModules": false
   }
 }
