Adding react-resizable dependency

--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -69,7 +69,9 @@
     "@patternfly/react-icons": "^4.7.11",
     "@patternfly/react-styles": "^4.7.8",
     "@patternfly/react-table": "^4.19.45",
+    "@types/react-resizable": "^1.7.2",
     "lodash": "^4.17.20",
+    "react-resizable": "^1.11.0",
     "react-table": "^7.6.2"
   },
   "peerDependencies": {
