--- a/kie-wb-common-services/kie-wb-common-services-backend/src/test/projects/dummy_deps_complex/dummyB/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-services-backend/src/test/projects/dummy_deps_complex/dummyB/pom.xml
@@ -12,7 +12,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.5</version>
+      <version>${version.com.fasterxml.jackson.databind}</version>
     </dependency>
   </dependencies>
   <build>
