--- a/kie-wb-common-react/boxed-expression-editor/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/package.json
@@ -70,12 +70,10 @@
     "@patternfly/react-styles": "^4.7.8",
     "@patternfly/react-table": "^4.19.45",
     "@types/react-resizable": "^1.7.2",
-    "@types/recoil": "^0.0.1",
     "lodash": "^4.17.20",
     "react-id-generator": "^3.0.1",
     "react-resizable": "^1.11.0",
-    "react-table": "^7.6.2",
-    "recoil": "^0.1.2"
+    "react-table": "^7.6.2"
   },
   "peerDependencies": {
     "react": "16.12.0",
