--- a/kie-wb-common-react/boxed-expression-editor/showcase/package.json
+++ b/kie-wb-common-react/boxed-expression-editor/showcase/package.json
@@ -13,6 +13,7 @@
     "@types/react": "16.9.12",
     "@types/react-dom": "16.9.2",
     "customize-cra": "^0.9.1",
+    "cypress": "^6.5.0",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.13.0",
     "react-app-rewired": "2.1.8",
