KOGITO-4919: [DMN Designer] SDM is broken on -kogito-webapp-runtime (+ fix CI ban dependencies error)

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/pom.xml
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/pom.xml
@@ -272,6 +272,7 @@
     <dependency>
       <groupId>org.kie</groupId>
       <artifactId>kie-dmn-feel-gwt-functions</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.kie</groupId>
