--- a/kie-wb-common-dmn/.gitignore
+++ b/kie-wb-common-dmn/.gitignore
@@ -13,6 +13,6 @@
 # Repository wide ignore mac DS_Store files
 .DS_Store
 
-#This is on master. Ignore to make switching branches easier
+#This is on main. Ignore to make switching branches easier
 /kie-wb-common-dmn-webapp
 
