--- a/kie-wb-common-ala/kie-wb-common-ala-docker-provider/pom.xml
+++ b/kie-wb-common-ala/kie-wb-common-ala-docker-provider/pom.xml
@@ -178,15 +178,15 @@
         </exclusion>
         <exclusion>
           <groupId>org.glassfish.hk2.external</groupId>
-          <artifactId>javax.inject</artifactId>
+          <artifactId>jakarta.inject-api</artifactId>
         </exclusion>
         <exclusion>
           <groupId>org.glassfish.jersey.media</groupId>
           <artifactId>jersey-media-json-jackson</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>javax.annotation</groupId>
-          <artifactId>javax.annotation-api</artifactId>
+          <groupId>jakarta.annotation</groupId>
+          <artifactId>jakarta.annotation-api</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -194,13 +194,6 @@
       <groupId>org.jboss.weld.se</groupId>
       <artifactId>weld-se-core</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <!-- collides with javax.inject:javax.inject:jar:1:compile -->
-        <exclusion>
-          <groupId>jakarta.enterprise</groupId>
-          <artifactId>jakarta.enterprise.cdi-api</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
