--- a/kie-wb-common-ala/kie-wb-common-ala-source-git/pom.xml
+++ b/kie-wb-common-ala/kie-wb-common-ala-source-git/pom.xml
@@ -59,8 +59,8 @@
       <artifactId>uberfire-nio2-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
+      <groupId>jakarta.inject</groupId>
+      <artifactId>jakarta.inject-api</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
