--- a/kie-wb-common-profile/kie-wb-common-profile-api/pom.xml
+++ b/kie-wb-common-profile/kie-wb-common-profile-api/pom.xml
@@ -71,8 +71,8 @@
       <artifactId>kie-wb-common-examples-screen-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
