--- a/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-api/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-library/kie-wb-common-library-api/pom.xml
@@ -84,6 +84,11 @@
       <artifactId>kie-wb-common-profile-api</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.ws.rs</groupId>
+      <artifactId>jakarta.ws.rs-api</artifactId>
+    </dependency>
+
   </dependencies>
 
 </project>
