Fix Enforcer configuration (#9)

--- a/kie-wb-common-services/kie-wb-common-services-backend/pom.xml
+++ b/kie-wb-common-services/kie-wb-common-services-backend/pom.xml
@@ -90,7 +90,7 @@
             </goals>
             <configuration>
               <rules>
-                <requirePluginVersions>
+                <requirePluginVersions combine.children="append">
                   <!-- Allow kie-takari-plugin to use SNAPSHOT version -->
                   <unCheckedPluginList>org.kie:kie-takari-plugin</unCheckedPluginList>
                 </requirePluginVersions>
