Fix some tests (#11)

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/pom.xml
@@ -33,6 +33,9 @@
   <properties>
     <java.module.name>org.kie.wb.common.stunner.bpmn.api</java.module.name>
     <jacoco.line.coveredratio.minimum>0.0</jacoco.line.coveredratio.minimum>
+
+    <!-- GWTTestCases need this Jetty version to work correctly. -->
+    <version.org.eclipse.jetty>9.2.14.v20151106</version.org.eclipse.jetty>
   </properties>
 
   <dependencies>
